Chrome overflow bug fix.

--- a/public/LESS_FILES/overrides.less
+++ b/public/LESS_FILES/overrides.less
@@ -212,3 +212,9 @@ aside nav ul li a {
 aside nav ul li.active > a:before {
 	content: "" !important;
 }
+
+nav ul li {
+    overflow: visible;
+    
+}
+    
